[package]
name = "mldr"
authors = ["MagicTeaMC <maoyue@maoyue.tw>"]
description = "My TLDR, your own commands note!"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

repository = "https://github.com/MagicTeaMC/mldr"
readme = "README.md"
keywords = ["tldr"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
